--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro:400,700);
+
+
 @font-face {
   font-family: 'fugueregular';
   src: url('./fonts/fugue-webfont.eot');
@@ -5,28 +8,58 @@
   font-weight: normal;
   font-style: normal;
 }
-@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
+
+
+
+
 body {
   font-family: 'fugueregular', sans-serif;
+  font-weight: 200;
   color: white;
   letter-spacing: 1px;
   font-size: inherit;
   background: #7F7F7F;
-  ;
   perspective: 600px;
   font-weight: normal;
   -webkit-font-smoothing: antialiased;
 }
+
+.site-container {
+  position: relative;
+  margin: none;
+  padding: none;
+}
+
+body .on {
+  overflow: hidden;
+}
+
+
+#name {
+  font-size: 20px;
+}
+
+#projects-button {
+  font-family: 'Anonymous Pro', sans-serif;
+  z-index: 100;
+}
+
 p, a {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Anonymous Pro', sans-serif;
 }
 .project {
   flex: 1;
   text-align: center;
 }
+
+.project-title {
+  font-size: 1.6em;
+  line-height: 1;
+}
+
 aside {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   z-index: 90;
   position: fixed;
@@ -60,6 +93,7 @@ section {
   background: #0B0B0B;
   transition: all 0.3s ease-in-out;
 }
+
 section.on {
   box-shadow: 0 5px 20px #333333;
   cursor: zoom-out;
@@ -67,6 +101,13 @@ section.on {
   transform-origin: 50% 0;
   transform: scale(.8) translateY(83vh);
 }
+
+.contact {
+  position: fixed;
+  top: 30vh;
+  left: 8vw;
+}
+
 h2 {
   font-size: 1em;
 }
@@ -75,22 +116,18 @@ h2 {
   color: white;
   z-index: 100;
   position: fixed;
-  width: 40px;
+  width: 110px;
   height: 40px;
-  top: 50px;
-  right: 50px;
+  top: 40px;
+  right: 100px;
   background: none;
   border: none;
-  border-radius: 5px;
   outline: none;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
-  font-size: 16px;
+  font-size: 20px;
 }
-#projects-button.on {
-  transform: rotate(-180deg);
-  transition: all .2s ease-in-out;
-}
+
 .glitch_word_box {
   -webkit-animation: disappear 1s linear;
   -webkit-animation-iteration-count: infinite, infinite;
@@ -99,11 +136,13 @@ h2 {
   -o-animation: disappear 1s linear;
   -o-animation-iteration-count: infinite, infinite;
 }
+
 .glitch_word_box .glitch_word0 {
   position: absolute;
   width: 100%;
 }
 .glitch_word_box .glitch_word1 {
+  display: none;
   color: red;
   font-weight: bolder;
   left: -2px;
@@ -119,6 +158,7 @@ h2 {
   -o-animation-iteration-count: infinite;
 }
 .glitch_word_box .glitch_word2 {
+  display: none;
   color: blue;
   font-weight: bolder;
   left: 2px;
@@ -133,6 +173,14 @@ h2 {
   -o-animation: animate_glitch_2 .3s linear;
   -o-animation-iteration-count: infinite;
 }
+
+.glitch_word_box.hover .glitch_word1{
+  display: block;
+}
+
+.glitch_word_box.hover .glitch_word2{
+  display: block;
+}
 @-webkit-keyframes disappear {
   0% {
     opacity: 0;
@@ -141,6 +189,8 @@ h2 {
     opacity: 1;
   }
 }
+
+
 @-webkit-keyframes animate_glitch_1 {
   0% {
     top: 1px;
@@ -276,4 +326,45 @@ h2 {
     top: -1px;
     left: -1px;
   }
+}
+
+@media only screen and (max-width : 720px) {
+
+.projects-button-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#projects-button {
+  height: 50px;
+  top: 0;
+  right: 0;
+
+}
+
+.project-title {
+  font-size: 1em;
+  line-height: 0;
+}
+
+p {
+  line-height: 1.5;
+}
+
+body.on {
+  overflow-y: hidden;
+}
+aside.on {
+  flex-direction: column;
+  justify-content: space-around;
+  margin: auto;
+  top: 16vh;
+  height: 45vh;
+  }
+
+  section {
+    overflow: hidden;
+  }
+
 }
